src/tests/snapshots/dobutsu_shogi_2024__tests__initial_search_node_child0_children_are_correct.snap
---
source: src/tests/mod.rs
expression: "format!(\"parent:\\n{child0}\\n\\nchildren:\\n{children}\")"
---
parent:
|---|                |---|
|G*E|                |GLE|
|*CL|                |*C*|
|*c*|                |lc*|
|elg|                |e*g|
|---|                |---|
unknown_child_count: 0
best_known_outcome: 0

children:
SearchNodeSet(len = 4) [
    0:
    |---|                |---|
    |G*E|                |G*E|
    |*CL|                |*CL|
    |lc*|                |lc*|
    |e*g|                |e*g|
    |---|                |---|
    unknown_child_count: 0
    best_known_outcome: 0
    ==========================
    1:
    |---|                |---|
    |G*E|                |G*E|
    |LC*|                |*CL|
    |lc*|                |*cl|
    |e*g|                |e*g|
    |---|                |---|
    unknown_child_count: 0
    best_known_outcome: 0
    ==========================
    2:
    |---|                |---|
    |GLE|                |G*E|
    |***|                |*cL|
    |lC*|                |***|
    |e*g|                |elg|
    |---|                |---|
    unknown_child_count: 0
    best_known_outcome: 0
    ==========================
    3:
    |---|                |---|
    |*LE|                |G*E|
    |GC*|                |*CL|
    |lc*|                |*cg|
    |e*g|                |el*|
    |---|                |---|
    unknown_child_count: 0
    best_known_outcome: 0
    ==========================
]
