src/tests/snapshots/dobutsu_shogi_2024__tests__initial_search_node_children_are_correct.snap
---
source: src/tests/mod.rs
expression: "SearchNode::initial().children().pretty()"
---
SearchNodeSet(len = 4) [
    0:
    |---|                |---|
    |G*E|                |GLE|
    |*CL|                |*C*|
    |*c*|                |lc*|
    |elg|                |e*g|
    |---|                |---|
    next_action: active_lion to r0c0
    ==========================
    1:
    |---|                |---|
    |G*E|                |GLE|
    |LC*|                |*C*|
    |*c*|                |*cl|
    |elg|                |e*g|
    |---|                |---|
    next_action: active_lion to r0c0
    ==========================
    2:
    |---|                |---|
    |GLE|                |GLE|
    |***|                |*c*|
    |*C*|                |***|
    |elg|                |elg|
    |---|                |---|
    next_action: active_lion to r0c0
    ==========================
    3:
    |---|                |---|
    |*LE|                |GLE|
    |GC*|                |*C*|
    |*c*|                |*cg|
    |elg|                |el*|
    |---|                |---|
    next_action: active_lion to r0c0
    ==========================
]
