src/tests/snapshots/dobutsu_shogi_2024__tests__initial_search_node_horizontally_flipped_is_correct.snap
---
source: src/tests/mod.rs
expression: "SearchNode::initial().into_builder().horizontally_flip().pretty()"
---
|---|                |---|
|ELG|                |ELG|
|*C*|                |*C*|
|*c*|                |*c*|
|gle|                |gle|
|---|                |---|
ply_count: 0
best_known_outcome: -201 (lose in 0)
next_action: active_lion to r0c0
