src/tests/snapshots/dobutsu_shogi_2024__tests__initial_search_node_is_correct.snap
---
source: src/tests/mod.rs
expression: "SearchNode::initial().pretty()"
---
|---|                |---|
|GLE|                |GLE|
|*C*|                |*C*|
|*c*|                |*c*|
|elg|                |elg|
|---|                |---|
required_child_report_count: 0
best_known_outcome: 0
