src/tests/snapshots/dobutsu_shogi_2024__tests__initial_search_node_partially_built_is_correct.snap
---
source: src/tests/mod.rs
expression: "SearchNode::initial().into_builder().build().pretty()"
---
|---|                |---|
|GLE|                |GLE|
|*C*|                |*C*|
|*c*|                |*c*|
|elg|                |elg|
|---|                |---|
unknown_child_count: 0
best_known_outcome: 0
