src/tests/snapshots/dobutsu_shogi_2024__tests__initial_search_node_with_incremented_ply_count_is_correct.snap
---
source: src/tests/mod.rs
expression: "SearchNode::initial().into_builder().increment_ply_count().pretty()"
---
|---|                |---|
|GLE|                |GLE|
|*C*|                |*C*|
|*c*|                |*c*|
|elg|                |elg|
|---|                |---|
ply_count: 1
best_known_outcome: -201 (lose in 0)
next_action: active_lion to r0c0
