src/tests/snapshots/dobutsu_shogi_2024__tests__initial_search_node_with_initialized_best_discovered_outcome_and_next_action.snap
---
source: src/tests/mod.rs
expression: "SearchNode::initial().into_builder().init_best_discovered_outcome_and_next_action().pretty()"
---
|---|                |---|
|GLE|                |GLE|
|*C*|                |*C*|
|*c*|                |*c*|
|elg|                |elg|
|---|                |---|
ply_count: 0
best_known_outcome: -201 (lose in 0)
next_action: active_lion to r0c0
